[gd_scene load_steps=23 format=2]

[ext_resource path="res://BattleWindow_Graphics/012_BattleWindow.png" type="Texture" id=1]
[ext_resource path="res://BattleWindow.gd" type="Script" id=2]
[ext_resource path="res://BattleWindow_Graphics/013_BWBubbles2-01.png" type="Texture" id=3]
[ext_resource path="res://BattleWindow_Graphics/013_BWBubbles3-01.png" type="Texture" id=4]
[ext_resource path="res://BattleWindow_Graphics/013_BWBubbles4-01.png" type="Texture" id=5]
[ext_resource path="res://BattleWindow_Graphics/013_BWBubbles-01.png" type="Texture" id=6]
[ext_resource path="res://BattleWindow_Graphics/013_BWBubbles5.png" type="Texture" id=7]
[ext_resource path="res://BattleWindow_Graphics/013_BWBubbles6.png" type="Texture" id=8]
[ext_resource path="res://3MB.tscn" type="PackedScene" id=9]
[ext_resource path="res://Chemical2.tscn" type="PackedScene" id=10]
[ext_resource path="res://Form2MPal.tscn" type="PackedScene" id=11]
[ext_resource path="res://3MBoh.tscn" type="PackedScene" id=12]
[ext_resource path="res://1Br3MB.tscn" type="PackedScene" id=13]
[ext_resource path="res://1Cl3MB.tscn" type="PackedScene" id=14]
[ext_resource path="res://1Cl3MB.gd" type="Script" id=15]
[ext_resource path="res://1I3MB.tscn" type="PackedScene" id=16]
[ext_resource path="res://2M2B.tscn" type="PackedScene" id=17]
[ext_resource path="res://2M2B.gd" type="Script" id=18]
[ext_resource path="res://2Br3MB.tscn" type="PackedScene" id=19]
[ext_resource path="res://2Br3MB.gd" type="Script" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/3-methyl-1-butanol.png-9ce3b5437c31610e5c1241dbd26a568e.stex"

[node name="BattleWindow" type="TextureRect"]
margin_right = 900.0
margin_bottom = 650.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="Bubble BackGround" type="AnimatedSprite" parent="."]
position = Vector2( 450, 325 )
frames = SubResource( 1 )
frame = 5
playing = true

[node name="3MB" parent="." instance=ExtResource( 9 )]
visible = false
margin_left = 4.0
margin_top = 4.0
margin_right = 898.0
margin_bottom = 639.0

[node name="3M2Boh" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Form2MPal" parent="." instance=ExtResource( 11 )]
visible = false

[node name="3MBoh" parent="." instance=ExtResource( 12 )]
visible = false

[node name="1Br3MB" parent="." instance=ExtResource( 13 )]
visible = false

[node name="1Cl3MB" parent="." instance=ExtResource( 14 )]
visible = false
script = ExtResource( 15 )

[node name="1I3MB" parent="." instance=ExtResource( 16 )]

[node name="2M2B" parent="." instance=ExtResource( 17 )]
visible = false
script = ExtResource( 18 )

[node name="2Br3MB" parent="." instance=ExtResource( 19 )]
visible = false
script = ExtResource( 20 )

[node name="TargetChemical" type="TextureRect" parent="."]
margin_left = 670.0
margin_top = 46.0
margin_right = 835.0
margin_bottom = 155.0
texture = SubResource( 2 )
expand = true

[connection signal="visibility_changed" from="3MBoh" to="." method="_on_3MBoh_visibility_changed"]
